complete register.xhtml frontend

--- a/src/main/webapp/WEB-INF/bookstore.template.xhtml
+++ b/src/main/webapp/WEB-INF/bookstore.template.xhtml
@@ -118,6 +118,8 @@
         <!-- Bootstrap JavaScript-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <h:outputScript library="javascripts" name="bootstrap.js" />
+        <h:outputScript library="javascripts" name="vue.js" />
+        <ui:insert name="scripts" />
     </h:body>
 
 </html>
