--- a/src/main/webapp/WEB-INF/admin.template.xhtml
+++ b/src/main/webapp/WEB-INF/admin.template.xhtml
@@ -92,7 +92,8 @@
 
         <!-- SCRIPTS -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.26/vue.js"></script><script type="text/javascript" src="/Bookstore/javax.faces.resource/bootstrap.js.xhtml?ln=javascripts"></script>
+        <h:outputScript library="javascripts" name="bootstrap.js" />
+        <h:outputScript library="javascripts" name="vue.js" />
         <script src="https://cdn.jsdelivr.net/vue.resource/0.9.3/vue-resource.min.js"></script>
         <ui:insert name="scripts" />
         
