--- a/src/main/webapp/bookstore.xhtml
+++ b/src/main/webapp/bookstore.xhtml
@@ -14,7 +14,7 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./bookstoreTemplate.xhtml">
+                template="WEB-INF/bookstore.template.xhtml">
 
     <ui:define name="top"></ui:define> 
     <ui:define name="content">
