Configure JDBC Resource

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -52,7 +52,7 @@
                                     </div>
                                 </div>
 
-                                <h:commandButton action="#{memberSessionBean.login()}" id="login-form-submitButton" class="btn btn-primary" value="Log in" />
+                                <h:commandButton action="#{memberSessionBean.login()}" class="btn btn-primary" value="Log in" />
                             </h:form>
                             <hr />
                             <div>
