--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -61,7 +61,8 @@
                                                     <i class="fa fa-star-o golden-star" aria-hidden="true"></i>
                                                 </div>
                                                 <p>
-                                                    <a href="#" class="btn btn-primary" role="button"><i class="fa fa-cart-plus" aria-hidden="true"></i> Buy</a> 
+                                                    <a href="" class="btn btn-primary" role="button"> <!-- added to test add sale functions-->
+                                                        <i class="fa fa-cart-plus" aria-hidden="true"></i> Buy</a> 
                                                     <a href="#" class="btn btn-primary" role="button">
                                                         <i class="fa fa-heart" aria-hidden="true"></i>
                                                     </a>
