--- a/src/main/webapp/dashboard.xhtml
+++ b/src/main/webapp/dashboard.xhtml
@@ -248,7 +248,6 @@
 
 
         <!-- Bootstrap JavaScript-->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <h:outputScript library="javascripts" name="bootstrap.js" />
+        <ui:include src="WEB-INF/templates/scripts.xhtml" />
     </h:body>
 </html>
