--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -46,9 +46,9 @@
                                 <div class="login-form-group">
                                     <div class="input-group">
                                         <span class="input-group-addon" id="login-password-icon"><i class="fa fa-unlock-alt fa-fw" aria-hidden="true"></i></span>
-                                        <h:inputSecret value="#{memberSessionBean.password}" class="login-input form-control" >
+                                        <h:inputText value="#{memberSessionBean.password}" class="login-input form-control" >
                                             <f:passThroughAttribute name='placeholder' value="password"/>
-                                        </h:inputSecret>
+                                        </h:inputText>
                                     </div>
                                 </div>
 
